# Michael-Levin-QA-Engine

./: .gitignore  .gitlab-ci.yml  DEPLOYMENT.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  YOUTUBE_PIPELINE.md  app.py  config.py  generate_levin_prompt.sh  main.py  pyproject.toml  readme.md  requirements.txt  test_semantic_chunking.sh  test_single_paper.py  test_validation.py  webapp.py
.cursor/: rules.mdc
.cursor/docs/: automation_strategy.md  current_state.md  future_development.md  naming_convention.md  paper_selection.md
.cursor/rules/: code-organization.md  development-rules.md
.cusor/: levin-qa-engine-plan.md
.cusor/rules/: development-rules.md
ai_models/: __init__.py  base.py  claude_model.py  local_model.py  openai_model.py
archive/extracted_texts/: bioe.2024.0006.txt  d3dd00185g.txt  fpsyg-10-02688.txt  s42005-025-02101-5.txt  watson-levin-2023-the-collective-intelligence-of-evolution-and-development.txt
configs/: settings.py
data/: papers.json
data/jobs_metadata/: extraction_jobs.json
docs/: current_state.md  future_development.md
inputs/youtube_videos/: youtube_urls.txt
modules/: __init__.py
modules/pdf_processing/: __init__.py  base.py  pdfplumber_processor.py  pymupdf_processor.py
modules/storage/: __init__.py  base.py  json_storage.py
modules/text_extraction/: __init__.py  base.py  base_extractor.py  openai.py
outputs/: combined_chunks.json  metadata.json  youtube_metadata.json
outputs/extracted_texts/: Life  its origin  and its distribution  a perspective from the Conway-Kochen Theorem and the Free Energy Principle.txt  PIIS0168952525000770.txt  bioe.2024.0006.txt  d3dd00185g.txt  fpsyg-10-02688.txt  kapsetaki-et-al-2025-the-bioelectrics-of-immortality-and-mortality-in-cold-sensitive-hydra-oligactis.txt  load051.txt  s42005-025-02101-5.txt  watson-levin-2023-the-collective-intelligence-of-evolution-and-development.txt
outputs/youtube_transcripts/: Scaling_Intelligence_in_Biology_Artificial_Life_and_Beyond_by_Michael_Levin_metadata.json
scripts/: combine_chunks_for_embedding.py  create_paper_database.py  create_semantic_chunks.py  generate_levin_prompt.py  generate_semantic_prompt.py  generated_levin_prompt.txt  integrate_youtube_chunks.py  llm_extract_metadata.py  query_rag.py  rename_from_database.py  reprocess_consensus.py  run_cleaning_pipeline.py  simple_pipeline.py  youtube_pipeline.py
scripts/pipelines/: paper_pipeline.py
scripts/test/: run_tests.py  test_api_key.py  test_llm_extraction.py  test_model_swapping.py  test_pdf_cleaning.py
scripts/utils/: file_utils.py  metadata_utils.py
tests/: __init__.py  test_simple_pipeline.py
webapp/: Home.py  __init__.py
webapp/components/: __init__.py  citation_processor.py  rag_engine.py
webapp/pages/: 02_Chat.py  __init__.py  research_search.py
(+102 files in other folders)
