[project]
name = "levin-qa-engine"
version = "0.1.0"
description = "Simple PDF processing pipeline for Michael Levin research papers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.97.0",
    "pypdf>=5.8.0",
    "python-dotenv>=1.0.0",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "google-generativeai>=0.8.0",
    "faiss-cpu>=1.11.0.post1",
    "numpy>=2.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html"
]

[tool.coverage.run]
source = ["scripts"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
